--- a/design-system/package.json
+++ b/design-system/package.json
@@ -1,14 +1,17 @@
 {
   "name": "design-system",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "scripts": {
-    "build:css": "tailwindcss -i ./src/styles.css -o ./dist/styles.css --minify",
+    "build:css": "npx tailwindcss -i ./src/styles.css -o ./dist/styles.css --minify",
     "build": "tsup && npm run build:css",
-    "dev:css": "tailwindcss -i ./src/styles.css -o ./dist/styles.css --watch",
+    "dev:css": "npx tailwindcss -i ./src/styles.css -o ./dist/styles.css --watch",
     "dev": "tsup --watch & npm run dev:css"
   },
   "keywords": [],
@@ -30,7 +33,7 @@
     "@types/react-dom": "^18.3.7",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.0.0",
+    "tailwindcss": "^3.4.1",
     "tsup": "^8.5.0",
     "typescript": "^5.9.3"
   }
