--- a/docs/package.json
+++ b/docs/package.json
@@ -17,16 +17,17 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "autoprefixer": "^10.4.21",
-    "design-system": "^2.5.0",
+    "design-system": "file:../design-system",
     "next": "^14.2.33",
     "postcss": "^8.5.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.5.4",
+    "@types/node": "24.7.2",
     "eslint": "^9.37.0",
     "tsx": "^4.20.6"
   }
