--- a/storybook/package.json
+++ b/storybook/package.json
@@ -5,17 +5,22 @@
   "type": "module",
   "scripts": {
     "prestorybook": "npm --prefix ../design-system run build",
-    "storybook": "storybook dev -p 6006",
-    "build": "npm run prestorybook && storybook build"
+    "storybook": "npx storybook dev -p 6006",
+    "build": "npm run prestorybook && npx storybook build"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.6.20",
-    "@storybook/addon-interactions": "^7.6.20",
-    "@storybook/addon-links": "^7.6.20",
-    "@storybook/cli": "^7.6.20",
-    "@storybook/react-webpack5": "^7.6.20",
-    "@storybook/testing-library": "^0.2.2",
-    "typescript": "^5.4.0"
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-links": "^8.4.7",
+    "@storybook/react": "^8.4.7",
+    "@storybook/react-vite": "^8.4.7",
+    "@storybook/test": "^8.4.7",
+    "@types/react": "^18.3.26",
+    "@types/react-dom": "^18.3.7",
+    "@vitejs/plugin-react": "^4.3.4",
+    "storybook": "^8.4.7",
+    "typescript": "^5.4.0",
+    "vite": "^6.0.7"
   },
   "dependencies": {
     "design-system": "file:../design-system",
