--- a/site/package.json
+++ b/site/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^15.5.4",
+    "@types/node": "24.7.2",
     "eslint": "^9.37.0",
     "tsx": "^4.20.6"
   }
